# turnstyle

./: LICENSE  README.md  default.nix  shell.nix  stack.yaml  turnstyle.cabal  turnstyle.html  turnstyle.js
examples/: loop.ascii  metacircular.txt  pi.ascii
hs/lib/Turnstyle/: Compile.hs  Eval.hs  Expr.hs  Image.hs  JuicyPixels.hs  Main.hs  Number.hs  Parse.hs  Prim.hs  Text.hs  TwoD.hs
hs/lib/Turnstyle/Compile/: Bound.hs  Constraint.hs  Contaminate.hs  Expr.hs  Paint.hs  Recompile.hs  Shake.hs  Shape.hs  SimulatedAnnealing.hs  Solve.hs
hs/lib/Turnstyle/Text/: Parse.hs  Pretty.hs  Sugar.hs
hs/src/: AnnotateExamples.hs  ImageToASCII.hs  Main.hs  Recolor.hs  SpecFigures.hs  Website.hs
hs/test/: Main.hs
hs/test/Turnstyle/Compile/: Tests.hs
hs/test/Turnstyle/Eval/: Tests.hs
hs/test/Turnstyle/Expr/: Tests.hs
hs/test/Turnstyle/Quattern/: Tests.hs
hs/test/Turnstyle/Text/: Tests.hs
lib/Turnstyle/: Compile.hs  Eval.hs  Expr.hs  JuicyPixels.hs  Main.hs  Parse.hs  Pretty.hs  Prim.hs  Quattern.hs  Scale.hs  Spec.lhs  Text.hs  TwoD.hs
lib/Turnstyle/Compile/: Paint.hs  Shake.hs  Shape.hs  Solve.hs
lib/Turnstyle/Text/: Parse.hs  Pretty.hs  Sugar.hs
scripts/: quattern.hs
spec/: README.md
src/: AnnotateExamples.hs  EnlargeExamples.hs  Main.hs  Recolor.hs  SpecFigures.hs  Website.hs
test/: Main.hs
test/Turnstyle/Compile/: Tests.hs
test/Turnstyle/Expr/: Tests.hs
test/Turnstyle/Parse/: Tests.hs
test/Turnstyle/Quattern/: Tests.hs
test/Turnstyle/Text/: Tests.hs
website/: home.md  interpreter.css  playground.html  style.css  template.html
