Cabal-version:  2.2
Name:           turnstyle
Version:        0.1.0.0
Description:    Please see the README on GitHub at <https://github.com/jaspervdj/turnstyle#readme>
Homepage:       https://github.com/jaspervdj/turnstyle#readme
Bug-reports:    https://github.com/jaspervdj/turnstyle/issues
Author:         Jasper Van der Jeugt
Maintainer:     m@jaspervdj.be
Copyright:      2024 Jasper Van der Jeugt
License:        BSD-3-Clause
License-file:   LICENSE
Build-type:     Simple
Extra-source-files:
  README.md

Source-repository head
  type: git
  location: https://github.com/jaspervdj/turnstyle

Library
  Hs-source-dirs:  lib
  Ghc-options:     -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  Default-language: Haskell2010
  Exposed-modules:
    Turnstyle.JuicyPixels
    Turnstyle.Spec
  Build-depends:
    base        >= 4.7 && < 5,
    JuicyPixels >= 3.3 && < 3.4

Executable turnstyle
  Main-is:          Main.hs
  Hs-source-dirs:   src
  Ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010
  Build-depends:    base >=4.7 && <5, turnstyle

Test-suite turnstyle-test
  Type:             exitcode-stdio-1.0
  Main-is:          Spec.hs
  Other-modules:    Paths_turnstyle
  Hs-source-dirs:   test
  Ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010
  Build-depends:    base >=4.7 && <5, turnstyle
