Cabal-version:  2.2
Name:           turnstyle
Version:        0.1.0.0
Description:    Please see the README on GitHub at <https://github.com/jaspervdj/turnstyle#readme>
Homepage:       https://github.com/jaspervdj/turnstyle#readme
Bug-reports:    https://github.com/jaspervdj/turnstyle/issues
Author:         Jasper Van der Jeugt
Maintainer:     m@jaspervdj.be
Copyright:      2024 Jasper Van der Jeugt
License:        GPL-2.0-or-later
License-file:   LICENSE
Build-type:     Simple
Extra-source-files:
  README.md

Source-repository head
  type: git
  location: https://github.com/jaspervdj/turnstyle

Library
  Hs-source-dirs:  lib
  Ghc-options:     -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  Default-language: Haskell2010
  Exposed-modules:
    Turnstyle.Compile.Paint
    Turnstyle.Compile.Shape
    Turnstyle.Eval
    Turnstyle.Expr
    Turnstyle.Image
    Turnstyle.JuicyPixels
    Turnstyle.Number
    Turnstyle.Parse
    Turnstyle.Pretty
    Turnstyle.Prim
    Turnstyle.Quattern
    Turnstyle.Scale
    Turnstyle.TwoD
  Build-depends:
    base        >= 4.7 && < 5,
    containers  >= 0.6 && < 0.7,
    either      >= 5.0 && < 5.1,
    JuicyPixels >= 3.3 && < 3.4,
    mtl         >= 2.3 && < 2.4

Executable turnstyle
  Main-is:          Main.hs
  Hs-source-dirs:   src
  Ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010
  Build-depends:
    base                 >= 4.7  && < 5,
    containers           >= 0.6  && < 0.7,
    either               >= 5.0  && < 5.1,
    JuicyPixels          >= 3.3  && < 3.4,
    optparse-applicative >= 0.18 && < 0.19,
    turnstyle

Executable turnstyle-spec-figures
  Main-is:          SpecFigures.hs
  Hs-source-dirs:   src
  Ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010
  Build-depends:
    base         >= 4.7 && < 5,
    diagrams-lib >= 1.4 && < 1.5,
    diagrams-svg >= 1.4 && < 1.5,
    turnstyle

Executable turnstyle-enlarge-examples
  Main-is:          EnlargeExamples.hs
  Hs-source-dirs:   src
  Ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010
  Build-depends:
    base        >= 4.7 && < 5,
    directory   >= 1.3 && < 1.4,
    filepath    >= 1.4 && < 1.5,
    JuicyPixels >= 3.3 && < 3.4

Test-suite turnstyle-test
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  Hs-source-dirs:   test
  Ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  Default-language: Haskell2010
  Other-modules:
    Turnstyle.Compile.Tests
    Turnstyle.Quattern.Tests
  Build-depends:
    base             >= 4.7  && < 5,
    either           >= 5.0  && < 5.1,
    tasty            >= 1.4  && < 1.5,
    tasty-hunit      >= 0.10 && < 0.11,
    tasty-quickcheck >= 0.10 && < 0.11,
    turnstyle
